# plato-room-security-audit

./: AUDIT_v0.1.1.md  README.md  plato-security.yml  pyproject.toml
.github/workflows/: ci.yml  security-audit.yml
plato_room_security_audit/: __init__.py  _mesh.py  auditor.py  github_client.py  report.py  room.py
plato_room_security_audit/policies/: no_command_injection.flx  no_hardcoded_secrets.flx  no_path_traversal.flx  no_sql_injection.flx
tests/: test_auditor.py  test_report.py  test_room.py
