[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plato-room-security-audit"
version = "0.1.1"
description = "PLATO Security Audit Room — automated security auditing as an engine block"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "plato-core>=0.1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
plato-security-audit = "plato_room_security_audit.room:main"

[project.entry-points."superinstance.plugins"]
security-audit = "plato_room_security_audit._mesh:register"

[tool.setuptools]
packages = ["plato_room_security_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
